--- a/healthApp/Views/Shared/_NotLoggedInPartial.cshtml
+++ b/healthApp/Views/Shared/_NotLoggedInPartial.cshtml
@@ -1,1 +1,1 @@
-﻿@Html.ActionLink("Log in", "Login", "Login", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+﻿@Html.ActionLink("Log in", "Login", "Login", routeValues: null, htmlAttributes: new { id = "loginLink", style="text-align:center" })
