--- a/healthApp/Views/Shared/_Layout.cshtml
+++ b/healthApp/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <title>@ViewBag.Title - Login</title>
   
     @Scripts.Render("~/bundles/modernizr")
+    @Styles.Render("~/Content/css")
 
 </head>
 <body>
