--- a/healthApp/Views/Login/Details.cshtml
+++ b/healthApp/Views/Login/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model healthApp.Models.Accounts
+﻿@model healthApp.Models.Credentials
 
 @{
     ViewBag.Title = "Details";
@@ -11,12 +11,12 @@
 	<hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Username)
+            @Html.DisplayNameFor(model => model.UserName)
            
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Username)
+            @Html.DisplayFor(model => model.UserName)
         </dd>
 
         <dt>
