--- a/healthApp/Views/Login/Edit.cshtml
+++ b/healthApp/Views/Login/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model healthApp.Models.Accounts
+﻿@model healthApp.Models.Credentials
 
 @{
     ViewBag.Title = "Edit";
@@ -18,10 +18,10 @@
         @Html.HiddenFor(model => model.ID)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Username, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.UserName, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Username)
-                @Html.ValidationMessageFor(model => model.Username)
+                @Html.EditorFor(model => model.UserName)
+                @Html.ValidationMessageFor(model => model.UserName)
             </div>
         </div>
 
