--- a/healthApp/Views/Login/Login.cshtml
+++ b/healthApp/Views/Login/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model healthApp.Models.Accounts
+﻿@model healthApp.Models.Credentials
 
 @{
     ViewBag.Title = "Log in";
@@ -15,10 +15,10 @@
 
                     @Html.ValidationSummary(true)
                     <div class="form-group">
-                        @Html.LabelFor(m => m.Username, new { @class = "col-md-2 control-label" })
+                        @Html.LabelFor(m => m.UserName, new { @class = "col-md-2 control-label" })
                         <div class="col-md-10">
-                            @Html.TextBoxFor(m => m.Username, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(m => m.Username)
+                            @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(m => m.UserName)
                         </div>
                     </div>
                     <div class="form-group">
