--- a/healthApp/Views/Shared/_LoggedInPartial.cshtml
+++ b/healthApp/Views/Shared/_LoggedInPartial.cshtml
@@ -1,1 +1,2 @@
-﻿@Html.ActionLink("Log off", "LogOff", "Login", routeValues: null, htmlAttributes: new { id = "loginLink" })
+﻿
+@Html.ActionLink("Log off", "LogOff", "Login", routeValues: null, htmlAttributes: new { id = "loginLink" })
