--- a/healthApp/Views/Shared/_Layout.cshtml
+++ b/healthApp/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Health App Bitches</p>
+            <p>&copy; @DateTime.Now.Year - Health App</p>
         </footer>
     </div>
 
