--- a/healthApp/Views/Shared/_Layout.cshtml
+++ b/healthApp/Views/Shared/_Layout.cshtml
@@ -12,6 +12,18 @@
     @Scripts.Render("~/bundles/bootstrap")
 </head>
 <body>
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target=".sidebar-nav">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Health App</a>
+            </div>
+        </div>
+    </div>
     <div class="container">
         <div class="row row-offcanvas row-offcanvas-left">
 
@@ -26,7 +38,6 @@
             </div>
             <!-- end collapsable sidebar -->
             <div class="container body-content col-lg-6 col-md-6 col-xs-6 col-sm-6">
-                <!-- Check if user has session -->
                 @{
                     string username;
                     if (Session["UserProfile"] == null)
@@ -48,7 +59,6 @@
                         @Html.Partial("_NotLoggedInPartial");
 
                     }
-                    <!-- End check if user has session -->
                 }
                 @RenderBody()
             </div>
